verify if findDeadlockedThreads and getStackTrace cause STW